--- a/index.html
+++ b/index.html
@@ -1,52 +1,1 @@
-<!DOCTYPE html><html style=height:100%><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=0"><title>肉团</title><style>.skeleton {
-        position: fixed;
-        height: 100%;
-        overflow: hidden;
-        padding: 15px;
-        box-sizing: border-box;
-        background: #fff;
-        width: 100%;
-        top: 0;
-        left: 0;
-      }
-      .skeleton-nav {
-        height: 110px;
-        background: #eee;
-        margin-bottom: 15px;
-      }
-      .skeleton-swiper {
-        height: 440px;
-        background: #eee;
-        margin-bottom: 15px;
-      }
-      .skeleton-tabs {
-        list-style: none;
-        padding: 0;
-        margin: 0 -15px;
-        display: flex;
-        flex-wrap: wrap;
-      }
-      .skeleton-tabs-item {
-        width: 33%;
-        height: 80px;
-        box-sizing: border-box;
-        text-align: center;
-        margin-bottom: 15px;
-      }
-      .skeleton-tabs-item span {
-        display: inline-block;
-        width: 80px;
-        height: 80px;
-        border-radius: 55px;
-        background: #eee;
-      }
-      .skeleton-banner {
-        height: 250px;
-        background: #eee;
-        margin-bottom: 15px;
-      }
-      .skeleton-productions {
-        height: 50px;
-        margin-bottom: 15px;
-        background: #eee;
-      }</style><link href=./static/css/app.41988342467a4c392da14cbb04440545.css rel=stylesheet></head><body style=height:100%><div id=app-box><div data-server-rendered=true class="skeleton page"><div class=skeleton-nav style=height:200px;></div><ul class=skeleton-tabs><li class=skeleton-tabs-item><span></span></li><li class=skeleton-tabs-item><span></span></li><li class=skeleton-tabs-item><span></span></li></ul><div class=skeleton-nav></div><div class=skeleton-nav></div><div class=skeleton-nav></div><div class=skeleton-nav></div><div class=skeleton-nav></div></div></div><script type=text/javascript src=./static/js/manifest.9fffe419e5b07484bce2.js></script><script type=text/javascript src=./static/js/vendor.fed1a0e14a62b4685b2a.js></script><script type=text/javascript src=./static/js/app.fbceb956b78ba57fc28f.js></script></body></html>
+<!DOCTYPE html><html style=height:100%><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=0"><title>棋怪</title><link href=./static/css/app.41988342467a4c392da14cbb04440545.css rel=stylesheet></head><body style="height:100%;overflow: hidden;"><div id=app-box></div><script type=text/javascript src=./static/js/manifest.78234cd929d123facae3.js></script><script type=text/javascript src=./static/js/vendor.fed1a0e14a62b4685b2a.js></script><script type=text/javascript src=./static/js/app.fbceb956b78ba57fc28f.js></script></body></html>
